<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Àngel Mariages
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name" translatable="false">Rodalies Widget</string>
    <string name="title_activity_select_station">Select the destination</string>
    <string name="no_origin_set">Touch to set the origin</string>
    <string name="no_destination_set">Touch to set the destination</string>
    <string name="no_internet">The schedule service is not available and we don\'t have any data saved. Please try again later.</string>
    <string name="no_stations">The origin or the destination are not set</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="no_times">There are no current times for this pair of stations or the selected day</string>
    <string name="search_text">Type the name of a station</string>
    <string name="transfer_departure">Transfer</string>
    <string name="travel_time_toast">Alarm set: %s</string>
    <string name="dataInfoText">Schedules offered by Rodalies de Catalunya</string>
    <string name="dataInfoTextRenf">Schedules offered by Renfe</string>
    <string name="transfer_station_one">Transfer:</string>
    <string name="transfer_stations_one">1st transfer:</string>
    <string name="transfer_stations_two">2nd transfer:</string>
    <string name="transfer_departure_two">2nd transfer</string>
    <string name="transfer_departure_one">1st transfer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_schedule_title">Schedules</string>
    <string name="pref_show_all_times">All day</string>
    <string name="pref_download_return_schedule">Return schedule</string>
    <string name="pref_receive_notifications">Receive incident notifications</string>
    <string name="pref_about_title">About</string>
    <string name="pref_show_licenses">Licenses</string>
    <string name="pref_version">Version 1.7</string>
    <string name="pref_show_more_transfer_trains">More transfer trains</string>
    <string name="pref_show_more_transfer_trains_summary_on">Show more trains that you can go into in your transfer station going to the same destination</string>
    <string name="pref_group_transfer_exits">Group transfer trains</string>
    <string name="pref_group_transfer_exits_summary_on">Show only the trains from the transfer station if the origin train is the same</string>
    <string name="pref_scroll_to_time">Scroll to time</string>
    <string name="pref_donation">Do you want to help me?</string>
    <string name="pref_download_return_schedule_summary_on">Download return schedule</string>
    <string name="pref_download_return_schedule_summary_off">Don\'t download return schedule</string>
    <string name="pref_show_all_times_on">Show schedules from all the day</string>
    <string name="pref_show_all_times_off">Don\'t show the schedules for all day</string>
    <string name="pref_show_more_transfer_trains_summary_off">Don\'t show more trains from the transfer station</string>
    <string name="pref_group_transfer_exits_summary_off">Show the origin train duplicated if there are more trains from the transfer station that leave before any train from the origin</string>
    <string name="tutorial_next_button">Next</string>
    <string name="tutorial_skip_button">Skip</string>
    <string name="tutorial_start_button">Start</string>
    <string name="tutorial_1_title">Welcome to Rodalies Widget</string>
    <string name="tutorial_1_desc">This application is a widget. If you don\'t know how to use it we encourage you to follow this tutorial.\n\nTouch SKIP to access directly to the configuration.</string>
    <string name="tutorial_2_title">How to configure a Widget</string>
    <string name="tutorial_2_desc">In the Android devices there are this kind of applications called widgets that allow to view updated information, like the train schedules, quickly from our desktop.\n\nTo add a widget you just need to go to the main screen and press in blank space and a menu will show up.\n\nYou have an example in the next slide.</string>
    <string name="tutorial_3_title">You just need to search for the widget in the list that will appear</string>
    <string name="tutorial_3_desc">Access the configuration of the widget touching the START button</string>
    <string name="pref_view_tutorial">How to install a widget</string>
    <string name="alarm_set_train_departure_text">Train departure: %s</string>
    <string name="alarm_set_train_alarm_text">Alarm time: %s</string>
    <string name="alarm_set_train_before_text">%d minutes before</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_set_train_will_text">The alarm will ring</string>
    <string name="alarm_set_alarm_toast">Alarm set at %s</string>
    <string name="notification_content_text">Your train is coming!</string>
    <string name="alarm_already_configured">You already have an alarm configured! \nDo you want to remove it?</string>
    <string name="title_activity_select_alarm">Configure the alarm</string>
    <string name="toast_alarm_removed">Alarm removed</string>
    <string name="pref_set_sound">Select alarm sound</string>
    <string name="button">Change zone</string>
    <string name="notification_content_first_time">Do you know how to install a widget?</string>
    <string name="promotion_line_text">Do you like it?</string>
    <string name="rate_app_question">Do you like the app?</string>
    <string name="rate_app_negative">No?\nTell us why</string>
    <string name="rate_app_positive_button">Yes?\nRate the app on the store!</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="incidences_tab_text">Incidences</string>
    <string name="preferences_tab_text">Preferences</string>
    <string name="loading_text">Searching schedules</string>
    <string name="image_tutorial_description">Image of widget configuration</string>
    <string name="prompt_add_widget">Add widget</string>
</resources>
