<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_schedule_title">
        <SwitchPreference
            android:key="show_all_times"
            android:title="@string/pref_show_all_times" />

        <SwitchPreference
            android:dependency="show_all_times"
            android:key="scroll_to_time"
            android:title="@string/pref_scroll_to_time" />

        <SwitchPreference
            android:key="download_return_schedule"
            android:title="@string/pref_download_return_schedule"/>

        <SwitchPreference
            android:key="show_more_transfer_trains"
            android:title="@string/pref_show_more_transfer_trains"
            android:summary="@string/pref_show_more_transfer_trains_summary"/>

        <SwitchPreference
            android:dependency="show_more_transfer_trains"
            android:key="group_transfer_exits"
            android:title="@string/pref_group_transfer_exits"
            android:summary="@string/pref_group_transfer_exits_summary"/>

        <!--<SwitchPreference
            android:key="line_notifications"
            android:title="@string/pref_receive_notifications" />-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about_title">
        <Preference android:title="@string/pref_donation"
            android:key="pref_donation">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=JAFCPFEAET4JL" />
        </Preference>

        <Preference android:title="@string/pref_version" />
    </PreferenceCategory>
</PreferenceScreen>