<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Àngel Mariages
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<!--suppress AndroidElementNotAllowed -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/pref_schedule_title">
        <androidx.preference.SwitchPreferenceCompat
            android:key="show_all_times"
            android:summaryOff="@string/pref_show_all_times_off"
            android:summaryOn="@string/pref_show_all_times_on"
            android:title="@string/pref_show_all_times"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:dependency="show_all_times"
            android:key="scroll_to_time"
            android:title="@string/pref_scroll_to_time"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="show_more_transfer_trains"
            android:summaryOff="@string/pref_show_more_transfer_trains_summary_off"
            android:summaryOn="@string/pref_show_more_transfer_trains_summary_on"
            android:title="@string/pref_show_more_transfer_trains"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:dependency="show_more_transfer_trains"
            android:key="group_transfer_exits"
            android:summaryOff="@string/pref_group_transfer_exits_summary_off"
            android:summaryOn="@string/pref_group_transfer_exits_summary_on"
            android:title="@string/pref_group_transfer_exits"
            app:iconSpaceReserved="false" />

        <RingtonePreference
            android:key="pref_set_sound"
            android:ringtoneType="notification|ringtone"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/pref_set_sound"
            app:iconSpaceReserved="false" />

        <!--<SwitchPreference
            app:iconSpaceReserved="false"
            android:key="line_notifications"
            andrTitleitle="@string/pref_receive_notifications" />-->
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="Colors">
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/widget_background"
            android:key="pref_color_widget_background"
            android:title="Main background"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/title_background"
            android:key="pref_color_title_background"
            android:title="Title background"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/data_background"
            android:key="pref_color_data_background"
            android:title="Data background"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/widget_background"
            android:key="pref_color_control_buttons"
            android:title="Control buttons"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/active_text"
            android:key="pref_color_active_text"
            android:title="Active text"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/disabled_text"
            android:key="pref_color_disabled_text"
            android:title="Disabled text"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/contrast_text"
            android:key="pref_color_contrast_text"
            android:title="Contrast text"
            app:colorShape="circle"
            app:showDialog="false"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/pref_about_title">
        <androidx.preference.Preference
            android:key="pref_view_tutorial"
            android:title="@string/pref_view_tutorial"
            app:iconSpaceReserved="false" />

        <androidx.preference.Preference
            android:key="pref_donation"
            android:title="@string/pref_donation"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://goo.gl/AT8chs" />
        </androidx.preference.Preference>

        <androidx.preference.Preference
            android:title="@string/pref_version"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>