<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/title_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transferOneTitleText"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="#FFFFFF"
        tools:text="1st transfer on: Barcelona-Sants"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transferTwoTitleText"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="#FFFFFF"
        tools:text="2nd transfer on: Barcelona-Sants"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/departure"
            android:ellipsize="end"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/transfer_departure_one"
            android:ellipsize="end"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/transfer_departure_two"
            android:ellipsize="end"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/arrival"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>