<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/title_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingEnd="3dp"
            android:paddingRight="3dp"
            android:scrollHorizontally="true"
            android:textColor="#FFFFFF"
            android:text="@string/transfer_departure" />

        <TextView
            android:id="@+id/lineTransferOneText"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="1"
            android:textColor="@color/data_text"
            android:textSize="14sp"
            tools:text="R1" />

        <TextView
            android:id="@+id/transferOneTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:scrollHorizontally="true"
            android:textColor="#FFFFFF"
            tools:text="Barcelona-Sants"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:text="@string/departure"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:text="@string/arrival"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>